--- a/package.json
+++ b/package.json
@@ -10,11 +10,24 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
     "clsx": "^1.2.1",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-geocode": "^0.2.3",
+    "react-hook-form": "^7.40.0",
+    "react-number-format": "^5.1.2",
+    "react-outside-click-handler": "^1.3.0",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.4.5",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-yandex-maps": "^4.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
