--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL='http://localhost:8080/api/page/create'
 REACT_APP_SITE_URL='http://localhost:8080'
+REACT_APP_SERVER_URL='http://localhost:3000'
