--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "clsx": "^1.2.1",
+    "file-saver": "^2.0.5",
+    "interweave": "^13.0.0",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -27,6 +29,7 @@
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-yandex-maps": "^4.6.0",
     "web-vitals": "^2.1.4"
   },
