--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SITE_URL='http://localhost:8080'
-REACT_APP_SERVER_URL='http://localhost:3000'
+REACT_APP_SITE_URL='http://194.62.19.71:8080'
+REACT_APP_SERVER_URL='http://194.62.19.71:3000'
