--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "bvi": "^1.0.2",
     "clsx": "^1.2.1",
     "file-saver": "^2.0.5",
     "interweave": "^13.0.0",
+    "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -31,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-yandex-maps": "^4.6.0",
+    "userhelperlibrary": "^1.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
