--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "interweave": "^13.0.0",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -33,6 +32,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-yandex-maps": "^4.6.0",
+    "sass": "^1.58.3",
     "userhelperlibrary": "^1.5.1",
     "web-vitals": "^2.1.4"
   },
