--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SITE_URL='http://localhost:8080'
-REACT_APP_SERVER_URL='http://localhost:8080'
+REACT_APP_SITE_URL='http://95.163.236.45:8080'
+REACT_APP_SERVER_URL='https://5-углов.рф'
